video not showing bug

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -361,6 +361,16 @@ section.blue::before {
 }
 */ 
 
+video::before{
+  content: " ";
+  position: absolute;
+  top:0;
+  left: 0;
+  background: #aaa;
+  width: 100%;
+  height 100%;
+}
+
 .part video {
   object-fit: contain;
   object-position: 0 50%;
